# digicow-ai-farmer-intelligence

./: .env.example  .gitignore  README.md  api.py  app.py  check_featherless.py  check_models.py  digicow_offline.db  init_db.py  package-lock.json  package.json  pyproject.toml  render-server.mjs  requirements.txt  streamlit_app.py  test_all_models.py  test_backend.py  test_single_model.py
src/: routeTree.gen.ts  styles.css
src/components/: AdviceLogger.tsx  AppHeader.tsx  ComplaintAdvisor.tsx  EditFarmerDialog.tsx  FarmerCard.tsx  LanguageToggle.tsx  PriorityAdjuster.tsx  PriorityBadge.tsx  SymptomChecker.tsx  VetClinics.tsx
src/lib/: api.ts  api.ts.backup  export.ts  i18n.tsx  knowledge.ts  local-store.ts  types.ts
src/routes/: __root.tsx  farmers.$name.tsx  farmers.add.tsx  index.tsx
tests/: test_priority_overrides.py  test_sms.py
